--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ buildNumber.properties
 .mvn/timing.properties
 
 
+#project settings
+*.classpath
+*.project
+*.settings
+
+
 ### Java ###
 *.class
 
