--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-
+mvn3
+mvnw
+mvnw.cmd
+.mvn/wrapper
 
 #project settings
 *.classpath
